testdata/commands/test/config/config_all_fields.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Configuration
metadata:
  name: valid
  namespace: kyverno
spec:
  timeout: "60s"
  testDirs:
    - "/path/to/testdir1"
    - "/path/to/testdir2"
  skipDelete: true
  failFast: true
  parallel: 5
  reportFormat: "JSON"
  reportName: "custom-chainsaw-report"
  namespace: "test-namespace"
  suppress:
    - "logTypeA"
    - "logTypeB"
  fullName: true
  includeTestRegex: "^include-.*"
  excludeTestRegex: "^exclude-.*"
