testdata/commands/test/config/empty_config.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Configuration
metadata:
  name: default
  namespace: kyverno
