testdata/commands/test/config/wrong_format_config.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Configuration
metadata:
  name: default
  namespace: kyverno
spec:
  foo: bar
