testdata/commands/test/config/wrong_kind_config.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: foo
metadata:
  name: default
  namespace: kyverno
